[package]
name = "rusty-iot"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rowley <alex.rowley@gmail.com>"]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-rtt"] }
static_cell = { version = "1.1", features = ["nightly"]}

embassy-executor = {  version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = {  git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = {   git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "overclock"] }
embassy-futures = {   git = "https://github.com/embassy-rs/embassy" }
heapless = "0.7.15"
pio = "0.2.1"
rust-mqtt = { version = "0.1.3", default-features = false, features = ["defmt"], optional = false }
smoltcp = { version = "0.9.0", default-features = false, features = [
    "socket",
    "async",
]}
